--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Courgette&family=Kalam:wght@300;400&family=Playfair+Display:wght@500&family=Sacramento&display=swap"
         rel="stylesheet">
+        <link rel="images" href="images/606e36ab077df99dd0f681ed074ebe05-removebg-preview.png">
 </head>
 <body>
     <div class="header">
+        <img class="logo"src="images/606e36ab077df99dd0f681ed074ebe05-removebg-preview.png" alt="">
         <a class="active" href="#home">Home</a>
         <a class="news" href="#news">News</a>
         <a class="about" href="#about">About</a>
@@ -38,6 +40,11 @@
             <p class="use">Useful links</p>
             <a class="autocar" href="https://www.autocarindia.com/" >Autocar</a> <br>
             <a class="car-bike" href="https://www.carandbike.com/news">Car&Bike</a>
+        </div>
+        <div class="contact">
+            <p class="heading">Contact us</p>
+            <a class="insta" href="https://www.instagram.com/"><img class="insta-logo"src="https://icon-library.com/images/white-instagram-icon-png/white-instagram-icon-png-2.jpg" alt=""></a>
+            <a class="github" href="https://github.com/NikhilKavuri"> <img class="git-logo" src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt=""></a>
         </div>
     </div>
 </body>
